# capsule

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PROPOSAL.md  README.md  SECURITY.md  TODO.md
.claude/skills/ax/: SKILL.md
.claude/skills/converge/: SKILL.md
.converge/: run-20260424-213854.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/capsule-cli/: Cargo.toml
crates/capsule-cli/src/: config.rs  deploy_verify.rs  init.rs  main.rs  serialize_lint.rs  worktree.rs
crates/capsule-cli/tests/: completions.rs  deploy_verify.rs  doctor.rs  events.rs  queue.rs  serialize_lint.rs  worktree_cleanup.rs
crates/capsule-core/: Cargo.toml
crates/capsule-core/src/: id.rs  lib.rs  model.rs  path.rs  sha.rs
crates/capsule-git/: Cargo.toml
crates/capsule-git/src/: lib.rs
crates/capsule-store/: Cargo.toml
crates/capsule-store/src/: lib.rs  schema.rs
scripts/: install.sh
skills/capsule/: SKILL.md  pre-receive.sh
