[workspace]
resolver = "2"
members = [
    "crates/capsule-core",
    "crates/capsule-store",
    "crates/capsule-git",
    "crates/capsule-cli",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/limiteinductive/capsule"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
rusqlite = { version = "0.39", features = ["bundled"] }
# time 0.3.46 raises its MSRV to Rust 1.88; keep this below that
# boundary while Capsule's workspace MSRV is Rust 1.85.
time = { version = ">=0.3, <0.3.46", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "1.1"

# workspace-internal
capsule-core = { path = "crates/capsule-core" }
capsule-store = { path = "crates/capsule-store" }
capsule-git = { path = "crates/capsule-git" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
