[package]
name = "capsule-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reference CLI for capsule."

[[bin]]
name = "capsule"
path = "src/main.rs"

[dependencies]
capsule-core.workspace = true
capsule-store.workspace = true
capsule-git.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
fs2 = "0.4"
tempfile = "3"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
rusqlite.workspace = true
